# sfizz

./: .gitignore  CMakeLists.txt
api/: CMakeLists.txt  api.cpp
out-android/: build.cmd
